@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Net-NIS-Netgroup
-version:      1.0.1
+version:      1.1
 version_from: lib/Net/NIS/Netgroup.pm
 installdirs:  site
 requires:
