@@ -1,7 +1,7 @@
 /*
- * $Id: Netgroup.xs,v 1.1 2009/06/09 14:31:58 bastian Exp $
+ * $Id: Netgroup.xs,v 1.3 2010/08/12 14:10:24 bastian Exp $
  *
- * Copyright (C) 2009 Collax GmbH
+ * Copyright (C) 2009, 2010 Collax GmbH
  *                    (Bastian Friedrich <bastian.friedrich@collax.com>)
  */
 
@@ -75,3 +75,62 @@ innetgr(sv_netgroup, sv_host, sv_user, sv_domain)
 	} else {
 		XPUSHs(&PL_sv_undef);
 	}
+
+
+AV *
+listnetgr(netgroup, stringify = 0)
+	char *netgroup
+	bool stringify
+
+    PREINIT:
+	char *host;
+	char *user;
+	char *domain;
+
+	HV *el;
+	char *buf;
+	int bufsize = 256;
+	int len;
+    PPCODE:
+
+	if (stringify) {
+		buf = malloc(bufsize);
+		if (!buf) {
+			Perl_croak(aTHX_ "Could not allocate memory");
+		}
+	}
+
+	setnetgrent(netgroup);
+
+	while (getnetgrent (&host, &user, &domain)) {
+		if (stringify) {
+			if (!host) host = "";
+			if (!user) user = "";
+			if (!domain) domain = "";
+			len = strlen("(,,)") + strlen(host) + strlen(user) + strlen(domain);
+			if ((len+1) > bufsize) {
+				bufsize = len + 1;
+				buf = realloc(buf, bufsize);
+				if (!buf) {
+					Perl_croak(aTHX_ "Could not allocate memory");
+				}
+			}
+			sprintf(buf, "(%s,%s,%s)", host, user, domain);
+			XPUSHs(sv_2mortal(newSVpv(buf, len)));
+		} else {
+			el = newHV();
+
+			hv_store(el, "host", strlen("host"), host ? newSVpv(strdup(host), 0) : newSV(0), 0);
+			hv_store(el, "user", strlen("user"), user ? newSVpv(strdup(user), 0) : newSV(0), 0);
+			hv_store(el, "domain", strlen("domain"), domain ? newSVpv(strdup(domain), 0) : newSV(0), 0);
+
+			XPUSHs(sv_2mortal(newRV_noinc((SV*)el)));
+		}
+	}
+
+	if (stringify) {
+		free(buf);
+	}
+
+	endnetgrent();
+
